@@ -615,6 +615,18 @@ namespace tol {
 			Pointer = NULL;
 		}
 	}
+
+//d Make accessible the static member named 'name' of type 'type__'.
+#define E_DISCLOSE(type__, name )\
+	const type__ &name( void ) const\
+	{\
+		return S_.name;\
+	}\
+	type__ &name( void )\
+	{\
+		return S_.name;\
+	}
+
 }
 
 /*$END$*/
