@@ -1,7 +1,7 @@
 /*
 	'tol' library by Claude SIMON (csimon@epeios.org)
 	Requires the 'tol' header file ('tol.h').
-	Copyright (C) 2000-2003 Claude SIMON (csimon@epeios.org).
+	Copyright (C) 2000-2004 Claude SIMON (csimon@epeios.org).
 
 	This file is part of the Epeios (http://epeios.org/) project.
 
